--- a/Module2 - Assignment/index.html
+++ b/Module2 - Assignment/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <title>module2-solution</title>
-            <link rel="stylesheet" href="/coursera-htmlcssjs/Module2-solution/css/styles.css">
+            <link rel="stylesheet" href="/coursera-htmlcssjs/Module2 - Assignment/css/styles.css">
         </head>
         <body>
             <h1 id="h1">Our Menu</h1>
