--- a/Module2 - Assignment/index.html
+++ b/Module2 - Assignment/index.html
@@ -11,30 +11,31 @@
                 <div>
                     <p class="sub1">Chicken</p>
                     <p class="content">
-                        Each section should have a section title region that is always positioned at the top right corner of the
-                        section no matter the view (desktop, tablet or mobile). Copy the titles from the mockup illustration
-                        (i.e., Chicken, Beef, Sushi) or come up with your own. (Hint: use relative and absolute positioning and
-                        offsets as discussed in Lecture 22.)
+                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                       Pellentesque id tempor turpis. Vivamus suscipit vel velit eu pulvinar. 
+                       Vivamus semper auctor porta. Morbi ac dapibus diam. Ut efficitur dictum vulputate. 
+                       Nullam quis ante magna. Duis vel leo molestie, placerat nisi et, egestas mi. Aenean nec venenatis est.
+                       Morbi vel porttitor ipsum, ut interdum lacus. Vivamus vel porttitor nulla. Ut ultrices ullamcorper felis, viverra viverra orci tempus a. 
                     </p>
                 </div>
             </section>
             <section class="column-lg-4 colmn-md-6 colmn-sm-12">
                 <div>
                     <p class="sub2">Beef</p>
-                    <p class="content">In the tablet view (between 768px and 991px, inclusively), the first 2 sections should be
-                        in the first row and be of equal size. The 3rd section should be in the second row and take up the
-                        entire row by itself. For a visual reference of this view, see the tablet mockup illustration below.</p>
+                    <p class="content"> Nullam at orci eget arcu fermentum eleifend. 
+                            Ut sollicitudin neque a felis iaculis, eget malesuada tortor iaculis.
+                            Sed iaculis justo vel augue faucibus consectetur. Aliquam condimentum eros et mauris efficitur ultrices. Morbi facilisis a mi non suscipit. 
+                            Maecenas dignissim sapien ac augue ullamcorper mattis.</p>
                 </div>
             </section>
             <section class="column-lg-4 colmn-md-12 colmn-sm-12">
                 <div>
                     <p class="sub3">Sushi</p>
-                    <p class="content">Pay attention to the spacing shown in the mockup illustrations. Note the spacing between
-                        sections (both horizontal and vertical). Note the horizontal spacing between the edges of the section
-                        and the edges of the browser window. Also, note the spacing between the dummy text in each section and
-                        the edges of the section. Lastly, make sure the dummy text is "pushed down" enough so it doesn't overlap
-                        the section title region. (Hint: use margins and padding and use border-box as your box-sizing as
-                        discussed in Lecture 19.)</p>
+                    <p class="content">Duis non pellentesque tortor. 
+                            Vivamus commodo enim at tortor suscipit ornare. Donec in viverra purus. Suspendisse in cursus ipsum, et imperdiet arcu. 
+                            In tristique elementum felis id dapibus. Phasellus vehicula gravida urna, sit amet interdum elit cursus ut. Aliquam erat volutpat.
+                            Proin tortor sapien, accumsan et aliquam in, molestie tempor diam. Etiam accumsan mauris non arcu dictum rhoncus. 
+                            Morbi sollicitudin feugiat hendrerit. Vivamus id molestie nulla.</p>
                 </div>
             </section>
         </body>
