--- a/Module2 - Assignment/index.html
+++ b/Module2 - Assignment/index.html
@@ -22,16 +22,18 @@
             <section class="column-lg-4 colmn-md-6 colmn-sm-12">
                 <div>
                     <p class="sub2">Beef</p>
-                    <p class="content"> Nullam at orci eget arcu fermentum eleifend. 
+                    <p class="content">
+                            Nullam at orci eget arcu fermentum eleifend. 
                             Ut sollicitudin neque a felis iaculis, eget malesuada tortor iaculis.
                             Sed iaculis justo vel augue faucibus consectetur. Aliquam condimentum eros et mauris efficitur ultrices. Morbi facilisis a mi non suscipit. 
-                            Maecenas dignissim sapien ac augue ullamcorper mattis.</p>
+                            Maecenas dignissim sapien ac augue ullamcorper mattis. </p>
                 </div>
             </section>
             <section class="column-lg-4 colmn-md-12 colmn-sm-12">
                 <div>
                     <p class="sub3">Sushi</p>
-                    <p class="content">Duis non pellentesque tortor. 
+                    <p class="content">
+                            Duis non pellentesque tortor. 
                             Vivamus commodo enim at tortor suscipit ornare. Donec in viverra purus. Suspendisse in cursus ipsum, et imperdiet arcu. 
                             In tristique elementum felis id dapibus. Phasellus vehicula gravida urna, sit amet interdum elit cursus ut. Aliquam erat volutpat.
                             Proin tortor sapien, accumsan et aliquam in, molestie tempor diam. Etiam accumsan mauris non arcu dictum rhoncus. 
