--- a/Module2 - Assignment/index.html
+++ b/Module2 - Assignment/index.html
@@ -11,11 +11,7 @@
                 <div>
                     <p class="sub1">Chicken</p>
                     <p class="content">
-                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                       Pellentesque id tempor turpis. Vivamus suscipit vel velit eu pulvinar. 
-                       Vivamus semper auctor porta. Morbi ac dapibus diam. Ut efficitur dictum vulputate. 
-                       Nullam quis ante magna. Duis vel leo molestie, placerat nisi et, egestas mi. Aenean nec venenatis est.
-                       Morbi vel porttitor ipsum, ut interdum lacus. Vivamus vel porttitor nulla. Ut ultrices ullamcorper felis, viverra viverra orci tempus a. 
+                     Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising chickens—in comparison to mammals such as cattle or hogs—chicken meat (commonly called just "chicken") and chicken eggs have become prevalent in numerous cuisines.
                     </p>
                 </div>
             </section>
@@ -23,21 +19,15 @@
                 <div>
                     <p class="sub2">Beef</p>
                     <p class="content">
-                            Nullam at orci eget arcu fermentum eleifend. 
-                            Ut sollicitudin neque a felis iaculis, eget malesuada tortor iaculis.
-                            Sed iaculis justo vel augue faucibus consectetur. Aliquam condimentum eros et mauris efficitur ultrices. Morbi facilisis a mi non suscipit. 
-                            Maecenas dignissim sapien ac augue ullamcorper mattis. </p>
+                            Beef is the culinary name for meat from cattle (Bos taurus).
+In prehistoric times, humankind hunted aurochs and later domesticated them. Since that time, numerous breeds of cattle have been bred specifically for the quality or quantity of their meat. Today, beef is the third most widely consumed meat in the world, after pork and poultry. As of 2018, the United States, Brazil, and China were the largest producers of beef. </p>
                 </div>
             </section>
             <section class="column-lg-4 colmn-md-12 colmn-sm-12">
                 <div>
                     <p class="sub3">Sushi</p>
                     <p class="content">
-                            Duis non pellentesque tortor. 
-                            Vivamus commodo enim at tortor suscipit ornare. Donec in viverra purus. Suspendisse in cursus ipsum, et imperdiet arcu. 
-                            In tristique elementum felis id dapibus. Phasellus vehicula gravida urna, sit amet interdum elit cursus ut. Aliquam erat volutpat.
-                            Proin tortor sapien, accumsan et aliquam in, molestie tempor diam. Etiam accumsan mauris non arcu dictum rhoncus. 
-                            Morbi sollicitudin feugiat hendrerit. Vivamus id molestie nulla.</p>
+                           sushi, a staple rice dish of Japanese cuisine, consisting of cooked rice flavoured with vinegar and a variety of vegetable, egg, or raw seafood garnishes and served cold. Restaurants specializing in sushi abound in Japan, where subtleties of preparation find a discriminating clientele, and the dish has gained popularity in the United States and elsewhere (see also sashimi).</p>
                 </div>
             </section>
         </body>
