--- a/Module2 - Assignment/index.html
+++ b/Module2 - Assignment/index.html
@@ -9,7 +9,7 @@
             <h1 id="h1">Our Menu</h1>
             <section class="column-lg-4 colmn-md-6 colmn-sm-12">
                 <div>
-                    <p class="sub1">Chicken</p>
+                    <p class="food1">Chicken</p>
                     <p class="content">
                      Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising chickens—in comparison to mammals such as cattle or hogs—chicken meat (commonly called just "chicken") and chicken eggs have become prevalent in numerous cuisines.
                     </p>
@@ -17,7 +17,7 @@
             </section>
             <section class="column-lg-4 colmn-md-6 colmn-sm-12">
                 <div>
-                    <p class="sub2">Beef</p>
+                    <p class="food2">Beef</p>
                     <p class="content">
                             Beef is the culinary name for meat from cattle (Bos taurus).
 In prehistoric times, humankind hunted aurochs and later domesticated them. Since that time, numerous breeds of cattle have been bred specifically for the quality or quantity of their meat. Today, beef is the third most widely consumed meat in the world, after pork and poultry. As of 2018, the United States, Brazil, and China were the largest producers of beef. </p>
@@ -25,7 +25,7 @@ In prehistoric times, humankind hunted aurochs and later domesticated them. Sinc
             </section>
             <section class="column-lg-4 colmn-md-12 colmn-sm-12">
                 <div>
-                    <p class="sub3">Sushi</p>
+                    <p class="food3">Sushi</p>
                     <p class="content">
                            sushi, a staple rice dish of Japanese cuisine, consisting of cooked rice flavoured with vinegar and a variety of vegetable, egg, or raw seafood garnishes and served cold. Restaurants specializing in sushi abound in Japan, where subtleties of preparation find a discriminating clientele, and the dish has gained popularity in the United States and elsewhere (see also sashimi).</p>
                 </div>
