--- a/Module3 - Assignment/index.html
+++ b/Module3 - Assignment/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="/Coursera-HTML-CSS-and-JavaScript/Module3 - Assignment/css/styles.css">
+<link rel="stylesheet" type="text/css" href="/css/styles.css">
 
 
 
